[tool]
[tool.poetry]
name = "wireviz_fences"
version = "0.1.0"
homepage = "https://github.com/petrilli/wireviz_fences"
description = "Top-level package for Wireviz Fences."
authors = ["Christopher Petrilli <petrilli@amber.org>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "wireviz_fences" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
wireviz = "<1.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
